@@ -1,17 +1,19 @@
 package com.equinox;
+
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.NoSuchElementException;
 
 public class Memory {
-	// Accessible by members of the same package
+	private static int STACK_MAX_SIZE = 5;
 	private ArrayList<Todo> currentState;
-	private ArrayList<ArrayList<Todo>> stateHistory;
-
-	// For Redo
-	// private ArrayList<ArrayList<Todo>> stateFuture;
+	private LinkedList<ArrayList<Todo>> undoStack;
+	private LinkedList<ArrayList<Todo>> redoStack;
 
 	public Memory() {
-		currentState = new ArrayList<Todo>();
-		stateHistory = new ArrayList<ArrayList<Todo>>();
+		this.currentState = new ArrayList<Todo>();
+		this.undoStack = new LinkedList<ArrayList<Todo>>();
+		this.redoStack = new LinkedList<ArrayList<Todo>>();
 	}
 
 	public void add(Todo todo) {
@@ -21,38 +23,67 @@ public class Memory {
 	public Todo get(int userIndex) {
 		return currentState.get(--userIndex);
 	}
-	
-	public int getCurrentSize() {
+
+	public int size() {
 		return currentState.size();
 	}
-	
+
+	public int stackSize() {
+		return undoStack.size();
+	}
+
 	public void remove(int userIndex) {
 		currentState.remove(--userIndex);
 	}
 
 	public void saveCurrentState() {
+		ArrayList<Todo> currentStateCopy = deepCopyCurrentState();
+		if (undoStack.size() > STACK_MAX_SIZE) {
+			undoStack.removeFirst();
+		}
+		undoStack.add(currentStateCopy);
+	}
+
+	/**
+	 * @return
+	 */
+	private ArrayList<Todo> deepCopyCurrentState() {
 		ArrayList<Todo> currentStateCopy = new ArrayList<Todo>();
-		for(Todo todo: currentState) {
+		for (Todo todo : currentState) {
 			currentStateCopy.add(new Todo(todo));
 		}
-		stateHistory.add(currentStateCopy);
-	}
-	
-	public int getStateHistorySize(){
-		return stateHistory.size();
+		return currentStateCopy;
 	}
 
-	public void restoreLastState() {
-		// Discard previous state
-		currentState = stateHistory.remove(stateHistory.size() - 1);
+	public void restoreHistoryState() throws StateUndefinedException {
+		ArrayList<Todo> currentStateCopy = deepCopyCurrentState();
+		if (redoStack.size() > STACK_MAX_SIZE) {
+			redoStack.removeFirst();
+		}
+		redoStack.add(currentStateCopy);
+
+		try {
+			currentState = undoStack.removeLast();
+		} catch (NoSuchElementException e) {
+			throw new StateUndefinedException("No history states exist.");
+		}
 	}
 
-    /**
-     * Method to get all the todos for displaying purposes
-     * 
-     * @return all todos as ArrayList<Todo>
-     */
-    public ArrayList<Todo> getAllTodos() {
-        return currentState;
-    }
+	public void restoreFutureState() throws StateUndefinedException {
+		saveCurrentState();
+		try {
+			currentState = redoStack.removeLast();
+		} catch (NoSuchElementException e) {
+			throw new StateUndefinedException("No future states exist.");
+		}
+	}
+
+	/**
+	 * Method to get all the todos for displaying purposes
+	 * 
+	 * @return all todos as ArrayList<Todo>
+	 */
+	public ArrayList<Todo> getAllTodos() {
+		return currentState;
+	}
 }
